apps/media/cross-seed/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cross-seed
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: cross-seed
  ports:
    - name: http
      port: 2468
      targetPort: 2468
