apps/media/cross-seed/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cross-seed
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure 
spec:
  ingressClassName: traefik
  rules:
    - host: cross-seed.sakul-flee.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cross-seed
                port:
                  number: 2468
  tls:
    - hosts:
        - cross-seed.sakul-flee.de 
      secretName: cross-seed-sakul-flee-de-tls
